Table users {
    id varchar [pk]
    first_name varchar
    last_name varchar
    email varchar [unique]
    phone varchar [null]
    created_at timestamp
    updated_at timestamp
}

Table service {
    id varchar [pk]
    name varchar
}

Table provider_service {
    id varchar [pk]
    description varchar
    user_id varchar [ref: > users.id]
    service_id varchar [ref: - service.id]
    created_at timestamp
    updated_at timestamp
}

Table variants {
    id varchar [pk]
    name varchar
    price integer
    duration_in_minutes integer
    provider_service_id varchar [ref: > provider_service.id]
    created_at timestamp
    updated_at timestamp
}

Table contracted_service {
    id varchar [pk]
    status SERVICE_STATUS
    total_price integer
    date timestamp
    contractor_id varchar [ref: - users.id]
    service_variant_id varchar [ref: > variants.id]
    created_at timestamp
    updated_at timestamp
}

Table schedules {
    id varchar [pk]
    weekdays integer[]
    start time
    end time
    provider_service_id varchar [ref: - provider_service.id]
}

enum SERVICE_STATUS {
    PAYMENT_PENDING
    WAITING_CONFIRMATION
    SCHEDULED
    ONGOING
    FINISHED
}